# template-python

./: cookiecutter.json
{{cookiecutter.project_slug}}/: Dockerfile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __main__.py  aaa.py
{{cookiecutter.project_slug}}/tests/: main_test.py
